--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOM</title>
-    <script src="./script.js" type="module" defer></script>
+    <!-- <script src="./script.js" type="module" defer></script> -->
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -15,20 +15,8 @@
         porro est esse dolorem repudiandae harum consectetur neque dicta vel
         sunt consequuntur ut sed eos officia at corporis ducimus velit.
       </p>
-      <ul class="list js-list">
-        <li class="kist__item">
-          <a href="" class="list__link"></a>
-        </li>
-        <li class="kist__item">
-          <a href="" class="list__link"></a>
-        </li>
-        <li class="kist__item">
-          <a href="" class="list__link"></a>
-        </li>
-        <li class="kist__item">
-          <a href="" class="list__link"></a>
-        </li>
-      </ul>
+      <ul class="list js-gallery gallery"></ul>
+      <script src="gallery.js" type="module" defer></script>
     </div>
   </body>
 </html>
